--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0",
     "parcel": "^2.12.0"
-  }
+  },
+  "browserslist": "> 0.5%, last 2 versions, not dead"
 }
